[package]
name = "kobo-db-tools"
version = "0.0.6"
edition = "2021"
description = "A Rust library to parse and analyze Kobo e-reader SQLite databases."
license = "MIT"
repository = "https://github.com/mfdaves/kobo-reader-db"
keywords = ["kobo", "ereader", "sqlite", "data-analysis", "reading"]
categories = ["command-line-utilities", "data-structures", "parsing"]

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.41"
csv = "1.3.1"
hex = "0.4.3"
markdown2pdf = "0.1.3"
rusqlite = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",
    "serde",
]
